--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    
+    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 <body onload="checkQuryID()">
    
@@ -14,25 +15,29 @@
         <form  action='/' method="POST">
             <h1>URL SHORTNER</h1>
             <h3>URL Details</h3>
-            <input style="margin-bottom: 4px;" type="text" class="form-control" id="urlID" placeholder="Enter URL ID">
+            <!-- <input style="margin-bottom: 4px;" type="text" class="form-control" id="urlID" placeholder="Enter URL ID"> -->
             <br/>
-            <input style="margin-bottom: 4px;" type="text" class="form-control" id="urlBox" placeholder="Enter your URL">
-            <br/>
+            <input style="margin:0px 0px 4px 35%;" type="text" class="form-control form-control-lg col-md-4" id="usrUrlInput" placeholder="Enter your URL">
          </form>
-        <button id="sbmt" >Generate ShortURL</button>
-        <input style="margin-bottom: 4px;" type="text" class="form-control" id="shortUrl" placeholder="Your Shortend URL">
+         <div class="col-md-12 text-center">
+            <button id="sbmtBtn" class="btn btn-info">Generate ShortURL</button>
+         </div>
+       
+        <input style="margin:04px 0px 0px 35%;" type="text" class="form-control form-control-lg col-md-4" id="finalUrl" placeholder="Your Shortend URL" readonly>
           <br/>
           <!-- <button id="shrtURL" >Console ActualURL</button>
           <input style="margin-bottom: 4px;" type="text" class="form-control" id="actualUrl" placeholder="Your Actual URL"> -->
      </section>
-
      <br/>
 
-     <button style=" margin-bottom: 4px;" id = "serverChkBtn" >Server Check</button>
+     <button style=" margin-bottom: 4px;" id = "serverChkBtn" class="btn btn-danger">Server Check</button>
      <br/>
-     <input style="color: red; font-weight: bolder;" type="text" name="ServerUpMsg" id="ServerUpMsg" />
+     <input style="color: red; font-weight: bolder;" type="text" name="isServerUpMsg" id="ServerUpMsg" />
 
      <script src="./index.js"></script>
+     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 </html>
 
